# GPT-Fathom

./: README.md  pyproject.toml
assets/: references.bib
docs/: completion-fn-protocol.md  completion-fns.md  custom-eval.md  example.md  quick-evals.md  run-evals.md  sample.md
evals/: __init__.py  api.py  base.py  data.py  eval.py  formatting.py  metrics.py  record.py  registry.py
evals/build_data/: build_agieval.py  build_arc.py  build_bbh.py  build_ceval.py  build_drop.py  build_gsm8k.py  build_hellaswag.py  build_lambada.py  build_longbench.py  build_math.py  build_mgsm.py  build_mmlu.py  build_natural_questions.py  build_quality.py  build_race.py  build_realtoxic.py  build_triviaqa.py  build_truthfulqa.py  build_tydiqa.py  build_web_questions.py  cache_hf_data_for_local_eval.py
evals/build_data/math_prompt/: exemplars.py
evals/build_data/mgsm_prompt/: exemplars.py
evals/cli/: oaieval.py  oaievalset.py
evals/completion_fns/: cot.py  langchain_math.py  llama.py  openai.py  retrieval.py
evals/elsuite/: utils.py  utils_execute.py
evals/elsuite/basic/: code.py  fuzzy_match.py  includes.py  long_comprehension.py  math_problem.py  multiple_choice.py  reading_comprehension.py
evals/elsuite/dataset_specific/: agieval.py  bbh.py  ceval.py  lambada.py  mmlu_CoT.py  realtoxic.py  scibench.py  summedits.py  theoremqa.py
evals/prompt/: base.py  base_test.py
evals/utils/: api_utils.py  azure_utils.py  math_util.py  scibench_utils.py  snowflake.py  test.py  theoremqa_utils.py
scripts/: battle_generator.py  pattern_identification_generator.py
(+724 files in other folders)
