[project]
name = "evals"
version = "1.0.3.post1"
requires-python = ">=3.9"
dependencies = [
    "mypy",
    "openai >= 0.27.2",
    "tiktoken",
    "blobfile",
    "backoff",
    "numpy",
    "snowflake-connector-python[pandas]",
    "pandas",
    "datasets",
    "fire",
    "pydantic",
    "tqdm",
    "nltk",
    "filelock",
    "mock",
    "langdetect",
    'termcolor',
    "lz4",
    "pyzstd",
    "pyyaml",
    "sacrebleu",
    "matplotlib",
    "pytest",
    "setuptools_scm",
    "langchain",
    "types-PyYAML",
    "evaluate == 0.4.0",
    "transformers == 4.31.0",
    "torch==2.0.1" ,
    "sentencepiece==0.1.99",
    "accelerate==0.21.0",
    "tensor-parallel==1.3.2",
    "google-api-python-client==2.90.0"
]

[project.optional-dependencies]
formatters = [
    "black",
    "isort",
    "autoflake"
]

[project.scripts]
oaieval = "evals.cli.oaieval:main"
oaievalset = "evals.cli.oaievalset:main"

[tool.setuptools]
packages = ["evals"]
